add features form posts (create and display the new  post)